added user.destroy() & user.view()
